docs: 更新GitHub仓库地址并完善.gitignore
- 更新appendix-c.md中的GitHub地址为luckyhlq
- 更新.gitignore，排除部署脚本和服务器配置文件
- 确保敏感信息不会被上传到GitHub

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,12 @@ ENV/
 # Distribution
 dist/
 build/
+
+# Deployment & Server Config (敏感信息，不上传)
+deploy.sh
+nginx-*.conf
+*.pem
+*.key
+*.crt
+server-config/
+.ssh/
